# auto-subs

./: .gitignore  AGENTS.md  AutoSubs V1.py  AutoSubs V2.lua  AutoSubs.py  CLI.md  CONTRIBUTING.md  CopyTextProperties.py  LICENSE  README-AutoSubsV1.md  README.md  ResolveDocs.txt  V1_README.md  a-script.py  ascript.py  auto-subs-light.py  auto-subs.py  install-script.ps1  next.config.js  package-lock.json  package-win.ps1  package.json  release-notes.md  search-media-pool.py  tailwind.config.ts  test-script.py  test_results.md  test_socket_fix.lua  ui-script.py  update-script.ps1  whisper.ps1
.github/: CODEOWNERS  FUNDING.yml
Adobe-Extension/: CHANGELOG.md  LICENSE  README.md  bold-cep-guide.md  cep.config.ts  package-lock.json  package.json  tsconfig-build.json  vite.config.ts
AutoSubs/: package-lock.json  package.json  tailwind.config.js
AutoSubs-App/: .env.example  .gitignore  README.md  ResolveDocs.txt  build_logs.txt  components.json  index.html  models.json  package-lock.json  package.json  react-doctor.config.json  tailwind.config.js  tsconfig.node.json  typescript  vite.config.ts
AutoSubs-App/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
AutoSubs-App/src-tauri/.cargo/: config.toml
AutoSubs-App/src-tauri/capabilities/: default.json
AutoSubs-App/src-tauri/crates/autosubs-cli/: Cargo.toml
AutoSubs-App/src-tauri/crates/autosubs-cli/src/: main.rs
AutoSubs-App/src-tauri/crates/diarize/: .gitignore  AUTOSUBS_IMPORT.md  BUILDING.md  Cargo.toml  LICENSE  README.md
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/: .gitignore  BUILDING.md  Cargo.toml  README.md
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/src/: lib.rs
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/: Cargo.toml  build.rs  wrapper.hpp
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/: .gitignore  CMakeLists.txt  README.md
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/cmake/: googletest.cmake  pybind11.cmake
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/kaldi-native-fbank/: VENDORED_UPSTREAM.md
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/kaldi-native-fbank/csrc/: CMakeLists.txt  CPPLINT.cfg  feature-fbank.cc  feature-mfcc.cc  feature-window.cc  kaldi-math.cc  mel-computations.cc  online-feature.cc  rfft.cc  test-log.cc  test-online-fbank.cc  test-rfft.cc  whisper-feature.cc
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/kaldi-native-fbank/python/csrc/: CMakeLists.txt  feature-fbank.cc  feature-mfcc.cc  feature-mfcc.h  feature-window.cc  kaldi-native-fbank.cc  mel-computations.cc  online-feature.cc  rfft.cc  rfft.h  utils.cc  utils.h
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/kaldi-native-fbank/python/kaldi_native_fbank/: __init__.py
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knf/kaldi-native-fbank/python/tests/: CMakeLists.txt  test_fbank_options.py  test_feature_window_function.py  test_frame_extraction_options.py  test_mel_bank_options.py  test_online_mfcc.py  test_online_whisper_fbank.py  test_rfft.py
AutoSubs-App/src-tauri/crates/diarize/crates/knf-rs/sys/knfc/: CMakeLists.txt  knfc.cc  knfc.h
AutoSubs-App/src-tauri/crates/diarize/examples/: infinite.rs  max_speakers.rs  save_segments.rs
AutoSubs-App/src-tauri/crates/diarize/src/: embedding.rs  identify.rs  lib.rs  plda.rs  segment.rs  session.rs  wav.rs
AutoSubs-App/src-tauri/crates/diarize/tests/: example_audio.rs
AutoSubs-App/src-tauri/crates/transcription-engine/: Cargo.toml  README.md
AutoSubs-App/src-tauri/crates/transcription-engine/examples/: cache.rs  delete_cached_model.rs  list_cached_models.rs  moonshine-test.rs  parakeet-test.rs  progress.rs  progress_simple.rs  progress_types.rs  test.rs  test_delete_nonexistent.rs  test_transcribe_translate.rs  test_translate_progress.rs  transcribe.rs  translate-test.rs  translate.rs  whisper-test.rs
AutoSubs-App/src-tauri/crates/transcription-engine/src/: align.rs  audio.rs  engine.rs  formatting.rs  lib.rs  manifest.rs  model_manager.rs  speaker.rs  transcribe.rs  translate.rs  translation_pipeline.rs  types.rs  utils.rs  vad.rs
AutoSubs-App/src-tauri/crates/transcription-engine/src/engines/: canary.rs  cohere.rs  mod.rs  moonshine.rs  omni_asr.rs  parakeet.rs  sense_voice.rs  whisper.rs
AutoSubs-App/src-tauri/crates/transcription-engine/src/engines/onnx/: mod.rs
AutoSubs-App/src-tauri/linux/: autosubs.desktop
AutoSubs-App/src-tauri/macos/: postinstall
AutoSubs-App/src-tauri/resources/: AutoSubs (Dev).lua  AutoSubs V2.lua  AutoSubs.lua  Testing-AutoSubs.lua  caption-bin.drb  subtitle-template.drb
AutoSubs-App/src-tauri/resources/AutoSubs/: caption-bin.drb  subtitle-template.drb
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/: .debug
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/CSXS/: manifest.xml
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/assets/: main-BD1kEKY1.cjs  main-CFPuOZx_.css  main-Cg8LdOdy.cjs
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/jsx/: index.js  index.jsxbin
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/main/: index.html
AutoSubs-App/src-tauri/resources/com.autosubs.premiere/presets/: WAV_48_kHz_16_bits.epr
AutoSubs-App/src-tauri/resources/modules/: animate.lua  autosubs_core.lua  caption_template_version.lua  font_fallback.lua  libavutil.lua  macro_logic.lua  resolve_env.lua  utf8.lua  utils.lua
AutoSubs-App/src-tauri/src/: adobe_bridge.rs  audio.rs  audio_preprocess.rs  cli.rs  config.rs  logging.rs  main.rs  models.rs  premiere_bridge.rs  resolve_bridge.rs  tests.rs  traffic_lights.rs  transcribe.rs  transcript.rs  transcript_types.rs  transcription_api.rs
AutoSubs-App/src-tauri/tests/data/: correct-segments.json  transcript-smoke.json
AutoSubs-App/src-tauri/windows/: custom_installer.nsi  hooks.nsi  sign.cmd  sign.ps1
BrowserExtentions/: ChromeExtention.crx
Docs/: FusionDocs.txt  ResolveDocs.txt  cli.md  fusion_manual.md  resolve_api_reference.txt  resolve_integration.md
Mac-Server/: requirements.txt  (+2 more)
(+505 files in other folders)
