[workspace]
members = [
  ".",
  "crates/transcription-engine",
]
resolver = "2"

[package]
name = "autosubs"
version = "3.0.8"
description = "Transcribe and diarize audio files"
authors = ["Tom Moroney"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autosubs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"

reqwest = { version = "0.11", features = ["json", "blocking"] }

# Add tokio for asynchronous runtime
tokio = { version = "1", features = ["full"] }
tauri-plugin-os = "2"

# Transcription engine
transcription-engine = { path = "crates/transcription-engine" }

# Core utilities
eyre = "0.6"
tempfile = "3.9.0"
chrono = "0.4.38"
which = "6.0"
dirs = "5.0"
once_cell = "1.19.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["mac-aarch"]
mac-aarch = ["transcription-engine/mac-aarch"]
mac-x86_64 = ["transcription-engine/mac-x86_64"]
windows = ["transcription-engine/windows"]
linux = ["transcription-engine/linux"]
